force-app/main/default/objects/Person__c/fields/Encrypted_PIN__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_PIN__c</fullName>
    <label>Encrypted PIN</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>