force-app/main/default/objects/Person__c/fields/Maximum_Number_Of_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_Of_Rentals__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Maximum Number Of Rentals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>