force-app/main/default/objects/Person__c/fields/Number_Of_Current_Renatls__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Current_Renatls__c</fullName>
    <label>Number Of Current Renatls</label>
    <summaryFilterItems>
        <field>Loan__c.Status__c</field>
        <operation>equals</operation>
        <value>Borrowed, Delay</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan__c.Borrower__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>