force-app/main/default/objects/Person__c/fields/Person_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_ID__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Person ID</label>
    <type>AutoNumber</type>
</CustomField>