force-app/main/default/objects/Person__c/fields/Total_Unpaid_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Total_Unpaid_Penalty__c</fullName>
    <label>Total Unpaid Penalty</label>
    <summarizedField>Loan__c.Penalty__c</summarizedField>
    <summaryFilterItems>
        <field>Loan__c.Status__c</field>
        <operation>equals</operation>
        <value>Delay</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan__c.Borrower__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>