force-app/main/default/objects/Person__c/listViews/People_with_borrowed_items.listView-meta.xml
<ListView>
    <fullName>People_with_borrowed_items</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Person_ID__c</columns>
    <columns>Number_Of_Current_Renatls__c</columns>
    <columns>Maximum_Number_Of_Rentals__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Number_Of_Current_Renatls__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>People with borrowed items</label>
</ListView>