force-app/main/default/objects/Person__c/listViews/People_without_penalty.listView-meta.xml
<ListView>
    <fullName>People_without_penalty</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Person_ID__c</columns>
    <columns>Maximum_Number_Of_Rentals__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Total_Unpaid_Penalty__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>People without active penalty</label>
</ListView>